# rtsp_rs

./: Cargo.toml  README.md
src/: main.rs  types.rs
src/http/: mod.rs  version.rs
src/io/: bytes.rs
src/rtcp/: header.rs  mod.rs  packet.rs  report_block.rs  sdes.rs  sender_report.rs
src/rtp/: mod.rs  packet.rs  queue.rs  reader.rs
src/rtsp/: buffer.rs  header.rs  method.rs  mod.rs  protocol.rs  request.rs  response.rs
src/rtsp/client/: authorizer.rs  channel.rs  command.rs  mod.rs
src/rtsp/protocol/: builder.rs  method.rs  mod.rs  parser.rs  protocol.rs  status.rs
src/sdp/: attribute.rs  mod.rs  sdp.rs
src/util/: cursor.rs
